# HTML-rs

./: .gitignore  Cargo.toml  README.md  index.html  main.rs
dest/: index.html
doc/: crates.js  settings.html
doc/html/: fn.h3.html  fn.img.html  fn.script.html  struct.HTML.html
doc/implementors/core/marker/: trait.Sync.js
doc/implementors/core/panic/unwind_safe/: trait.UnwindSafe.js
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/html/: all.html  fn.a.html  fn.body.html  fn.div.html  fn.external_body.html  fn.h1.html  fn.h2.html  index.html  sidebar-items.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/implementors/libwizard/: trait.Debug.js
docs/libwizard/: all.html  fn.a.html  fn.body.html  fn.div.html  fn.h1.html  fn.h2.html  fn.h3.html  fn.img.html  fn.include_html.html  fn.script.html  index.html  sidebar-items.js  struct.CustomRoutes.html  struct.Server.html  struct.ServerResponse.html  struct.StyleResponse.html  trait.Debug.html
docs/libwizard/rust_to_html/: fn.a.html  fn.body.html  fn.div.html  fn.external_body.html  fn.h1.html  fn.h2.html  fn.h3.html  fn.img.html  fn.script.html  index.html  sidebar-items.js  struct.HTML.html
docs/src/html/: lib.rs.html
docs/src/libwizard/: lib.rs.html  rust_to_html.rs.html
src/: lib.rs  main.rs  prelude.rs  rust_to_html.rs
